urpc/internal/core/analysis/testdata/errors/naming/stream_not_pascal.ufo
// @expect: E101

rpc Users {
	stream userUpdates {
		input { id: string }
		output { event: string }
	}
}
